# slinger

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  .slinger_history  CLAUDE.md  EVENTLOG_IMPLEMENTATION_SUMMARY.md  FIND_IMPLEMENTATION.md  HELP_MENU.md  IMPACKET_EVENTLOG_RESEARCH.md  IMPLEMENTATION_PLANS.md  IMPLEMENTATION_PLAN_RESUME_DOWNLOADS.md  INTERACTIVE_WMI_DCOM_COMPLETE.md  README.md  RESEARCH.md  RESUME_DOWNLOADS_TECH_SPEC.md  TECHNICAL_SPEC.md  TODO..md  TODO.md  TODO.txt  WMIDCOM_INTEGRATION_COMPLETE.md  WMIDCOM_OPTIMIZATIONS_COMPLETE.md  WMIEXEC_DCOM_FINAL_IMPLEMENTATION.md  WMI_DCOM_IMPLEMENTATION_SUMMARY.md  WMI_DEBUGGING_GUIDE.md  WMI_EVENT_FIXES_SUMMARY.md  available_counters.txt  build.py  build_script.py  cli_command_analysis.md  cli_menu.md  command_mapping_analysis.json  counters.txt  coverage.xml  cpp_obfuscation_research_report.md  main.py  parse_requirements.py  pyproject.toml  pytest.ini  requirements.txt  (+9 more)
.github/workflows/: cli-flag-standards.yml  python-publish.yml  test-enforcement.yml  test.yml  traffic.yml
data/2026/04/: 2026-04-15_popular_paths.json  2026-04-15_popular_referrers.json  2026-04-15_views.json  2026-04-16_clones.json  2026-04-16_popular_paths.json  2026-04-16_popular_referrers.json  2026-04-16_views.json  2026-04-18_clones.json  2026-04-18_popular_paths.json  2026-04-18_popular_referrers.json  2026-04-18_views.json  2026-04-19_clones.json  2026-04-19_popular_paths.json  2026-04-19_popular_referrers.json  2026-04-19_views.json  2026-04-20_clones.json  2026-04-20_popular_paths.json  2026-04-20_popular_referrers.json  2026-04-20_views.json  2026-04-21_clones.json  2026-04-21_popular_paths.json  2026-04-21_popular_referrers.json  2026-04-21_views.json  2026-04-22_clones.json  2026-04-22_views.json  2026-04-23_clones.json  2026-04-23_popular_paths.json  2026-04-23_popular_referrers.json  2026-04-23_views.json  2026-04-24_clones.json  2026-04-24_popular_paths.json  2026-04-24_popular_referrers.json  2026-04-24_views.json  2026-04-25_clones.json  2026-04-25_popular_paths.json  2026-04-25_views.json  2026-04-26_clones.json  2026-04-26_popular_referrers.json  2026-04-26_views.json  2026-04-27_popular_paths.json  (+8 more)
data/2026/05/: 2026-05-01_clones.json  (+59 more)
docs/: CLI_HELP_REORGANIZATION.md  COM_NAMED_PIPE_WMI_RESEARCH.md  EVENTLOG_CHECK_FEATURE.md  EVENTLOG_ISSUE.md  EVENTLOG_WORKFLOW_PROGRESS.md  IMPLEMENTATION_PLANS.md  NAMED_PIPE_ENUMERATION_RESEARCH.md  NAMED_PIPE_EVENTLOG_RESEARCH.md  README.md  RESEARCH.md  RESUME_DOWNLOADS_TECH_SPEC.md  TODO.md  WMI_DIRECTORY_NAVIGATION_COMPLETE.md  WMI_EXECUTION_RESEARCH.md  WMI_NAMED_PIPE_EXECUTION_RESEARCH.md  WMI_STDOUT_CAPTURE_RESEARCH.md  WMI_WORKING_DIRECTORY_INTEGRATION_COMPLETE.md  agent_demo.md  cli_menu.md  evtx_manipulation_research.md
lib/: cooperative_agent.py
lib/agent_templates/: agent_main.cpp  auth_protocol.h  build_config.cmake  command_executor.h  crypto.h  dh_x25519.h  obfuscation.h  pipe_core.h  proxy_main.cpp  socks_channel.h
research/: README.md  download_state_design.py  error_recovery_strategy.py  smb_byte_range_poc.py
scripts/: build_script.py  check_cli_flags.py  generate_test_stub.py  install_agent_deps.py  render_stats.py
slinger/: __init__.py  slingerclient.py
slinger/lib/: dcetransport.py  plugin_base.py  schtasks.py  scm.py  slingerclient.py  smblib.py  winreg.py
slinger/plugins/: my_plugin copy.py  my_plugin.py
slinger/utils/: cli.py  common.py  logger.py  printlib.py
slinger/var/: config.py
src/: run_agents.py  slinger.py
src/debug_scripts/: process_perfbin.py
src/slingerpkg/: __init__.py  slinger.py
tests/: README.md  __init__.py  conftest.py  test_coverage_validator.py
tests/e2e/: __init__.py
tests/fixtures/: __init__.py  cli_runner.py  mock_smb_server.py
tests/integration/: __init__.py  test_commands.py
tests/unit/: __init__.py  test_find.py  test_parser.py  test_path_validation.py  test_smblib.py
(+44 files in other folders)
