[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slingerpkg"
version = "1.1"  # Replace with your __version__
description = "An impacket swiss army knife (sort of)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "ghost-ng", email = "ghost-ng@outlook.com" }
]
dependencies = ['impacket==0.11.0', 'prompt_toolkit==3.0.41', 'pycryptodome==3.20.0', 'setuptools==70.0.0', 'tabulate==0.8.9']

requires-python = ">=3.10"

scripts = { slinger = "slingerpkg.slinger:main" }


[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.setuptools.package-data]
"slingerpkg" = ["plugins/*"]

[project.urls]
Homepage = "https://github.com/ghost-ng/slinger"
