[build-system]
requires = [ "setuptools", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "slingerpkg"
version = "1.1.1"
description = "An impacket swiss army knife (sort of)"
readme = "README.md"
dependencies = [ "impacket==0.11.0", "prompt_toolkit==3.0.41", "pycryptodome==3.20.0", "setuptools==70.0.0", "tabulate==0.8.9", "toml",]
requires-python = ">=3.10"
[[project.authors]]
name = "ghost-ng"
email = "ghost-ng@outlook.com"

[project.license]
file = "LICENSE"

[project.scripts]
slinger = "slingerpkg.slinger:main"

[project.urls]
Homepage = "https://github.com/ghost-ng/slinger"

[tool.setuptools.package-data]
slingerpkg = [ "plugins/*",]

[tool.setuptools.packages.find]
where = [ "src",]
